# ROS2-STUDIO

./: .gitignore  BLOOM_RELEASE_COMMANDS.sh  CHANGELOG.rst  README.md  build.sh  install.sh  package.xml  ros2_cli.yml  setup.cfg  setup.py  test_install.sh
ros2_studio/: main.py
ros2_studio/command/: __init__.py  studio.py
ros2_studio/core/: bag_converter.py  bag_player.py  bag_recorder.py  performance_monitor.py  system_dashboard.py
ros2_studio/gui/: bag_convert_widget.py  bag_play_widget.py  bag_record_widget.py  main_window.py  monitoring_widget.py  system_dashboard_widget.py
ros2_studio/utils/: ros2_utils.py
