<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_studio</name>
  <version>0.1.0</version>
  <description>
    Comprehensive ROS2 monitoring and management tool with GUI.
    Features include real-time performance monitoring for topics and nodes,
    bag recording, bag playback, bag-to-CSV conversion, and a system dashboard.
  </description>

  <maintainer email="sourav.hawaldar@gmail.com">Sourav Hawaldar</maintainer>
  <license>Apache-2.0</license>

  <url type="website">https://github.com/Sourav0607/ROS2-STUDIO</url>
  <url type="repository">https://github.com/Sourav0607/ROS2-STUDIO</url>
  <url type="bugtracker">https://github.com/Sourav0607/ROS2-STUDIO/issues</url>

  <!-- Build system -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime: ROS2 core -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>ros2cli</exec_depend>
  <exec_depend>ros2topic</exec_depend>
  <exec_depend>ros2node</exec_depend>
  <exec_depend>ros2bag</exec_depend>
  <exec_depend>rosbag2_py</exec_depend>
  <exec_depend>rosidl_runtime_py</exec_depend>

  <!-- Runtime: Python system packages -->
  <exec_depend>python3-pyqt5</exec_depend>
  <exec_depend>python3-psutil</exec_depend>
  <exec_depend>python3-matplotlib</exec_depend>

  <!-- Test dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>