<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_studio</name>
  <version>0.1.0</version>
  <description>Comprehensive ROS2 monitoring and management tool with GUI for performance monitoring, bag recording, and bag playback</description>
  <maintainer email="sourav.hawaldar@gmail.com">sourav</maintainer>
  <license>Apache License 2.0</license>

  <!-- Build dependencies -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime dependencies -->
  <depend>rclpy</depend>
  <depend>ros2cli</depend>
  <depend>ros2topic</depend>
  <depend>ros2node</depend>
  <depend>ros2bag</depend>
  <depend>rosbag2_py</depend>
  <depend>python3-pyqt5</depend>
  <depend>python3-psutil</depend>
  <depend>python3-matplotlib</depend>

  <!-- Test dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
